@@ -192,3 +192,6 @@ strcpy(zxvision_switch_to_window_on_open_menu_name,"debugcpu")
 con el nombre de la ventana, puede saber si existe y si no, crearla. esto hacerlo justo al principio de menu_inicio
 
 y luego hacer que acabe entrando en zxvision_simple_window_manager con esa ventana activa
+
+
+-Gestion de acciones de debug breakpoint
